--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+
+            </div>
+        </div>
+    </div>
     <div class="container left-side">
         <div class="row">
             <div class="col-md-12 text-center">
@@ -46,7 +53,7 @@
         </div>
 
         <div class="row">
-            <div class="col content-2">
+            <div class="col-md-12 content-2">
                 <h2>Contribute</h2>
                 <a href="#">Help</a>
                 <a href="#">Community portal</a>
@@ -54,6 +61,18 @@
                 <a href="#">Upload file</a>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-12 content-3">
+                <h3>Tools</h3>
+                <a href="#">What links here</a>
+                <a href="#">Related changes</a>
+                <a href="#">Special pages</a>
+                <a href="#">Permanent link</a>
+                <a href="#">Page information</a>
+                <a href="#">Wiki-data item</a>
+            </div>
+        </div>
+
     </div>
 
 
