--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cardo&family=Noticia+Text&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -24,16 +24,24 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid topbar">
         <div class="row">
-            <div class="col">
-
+            <div class="col page-header">
+                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <ul class="navbar-nav ml-auto">
+                        <i class="material-icons" class="nav-brand">person</i>
+                        <li class="nav-item"><a href="#" class="nav-link">Talk</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contributions</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Create account</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
     </div>
     <div class="container left-side">
         <div class="row">
-            <div class="col-md-12 text-center">
+            <div class="col-md-12 col-sm-6 text-center">
                 <a href="#"><img src="images/logo (1).png" alt="logo">
                     <h1>WIKI-KNOW</h1>
                     <p>Knowledge at hand</p>
@@ -42,34 +50,46 @@
         </div>
         <div class="row">
             <div class="col-md-12 content-1">
-                <a href="#">Main page</a>
-                <a href="#">Contents</a>
-                <a href="#">Current events</a>
-                <a href="#">Random article</a>
-                <a href="#">About Wiki-know</a>
-                <a href="#">Contact us</a>
-                <a href="#">Donate</a>
+                <nav class="nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link">Main page</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contents</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Current events</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Random article</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">About Wiki-know</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Contact us</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Donate</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
 
         <div class="row">
             <div class="col-md-12 content-2">
                 <h2>Contribute</h2>
-                <a href="#">Help</a>
-                <a href="#">Community portal</a>
-                <a href="#">Recent changes</a>
-                <a href="#">Upload file</a>
+                <nav class="nav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Community portal</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Recent changes</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Upload files</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 content-3">
-                <h3>Tools</h3>
-                <a href="#">What links here</a>
-                <a href="#">Related changes</a>
-                <a href="#">Special pages</a>
-                <a href="#">Permanent link</a>
-                <a href="#">Page information</a>
-                <a href="#">Wiki-data item</a>
+                <nav class="nav">
+                    <h3>Tools</h3>
+                    <ul class="navbar-nav">
+                    <li class="nav-item"><a href="#" class="nav-link">What links here</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Related changes</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Special pages</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Permanent link</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Page information</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Wiki-data item</a></li>
+                    </ul>
+                </nav>
             </div>
         </div>
 
