--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <div class="container-fluid topbar">
         <div class="row">
             <div class="col page-header">
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <nav class="navbar navbar-expand">
                     <ul class="navbar-nav ml-auto">
-                        <i class="material-icons" class="nav-brand">person</i>
+                        <i class="material-icons" class="nav-brand">person</i><p>Not logged in</p>
                         <li class="nav-item"><a href="#" class="nav-link">Talk</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Contributions</a></li>
                         <li class="nav-item"><a href="#" class="nav-link">Create account</a></li>
