--- a/index.html
+++ b/index.html
@@ -23,79 +23,97 @@
     <title>Wiki-know</title>
 </head>
 
-<body>
-    <div class="container-fluid topbar">
-        <div class="row">
-            <div class="col page-header">
-                <nav class="navbar navbar-expand">
-                    <ul class="navbar-nav ml-auto">
-                        <i class="material-icons" class="nav-brand">person</i><p>Not logged in</p>
-                        <li class="nav-item"><a href="#" class="nav-link">Talk</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Contributions</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Create account</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </div>
-    <div class="container left-side">
-        <div class="row">
-            <div class="col-md-12 col-sm-6 text-center">
-                <a href="#"><img src="images/logo (1).png" alt="logo">
-                    <h1>WIKI-KNOW</h1>
-                    <p>Knowledge at hand</p>
-                </a>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 content-1">
-                <nav class="nav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Main page</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Contents</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Current events</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Random article</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">About Wiki-know</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Contact us</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Donate</a></li>
-                    </ul>
-                </nav>
+<body class="container body-content">
+    <div class="container">
+        <div class="topbar">
+            <div class="row">
+                <div class="col-md-12 page-header">
+                    <nav class="navbar navbar-expand">
+                        <ul class="navbar-nav ml-auto">
+                            <i class="material-icons" class="nav-brand">person</i>
+                            <p>Not logged in</p>
+                            <li class="nav-item"><a href="#" class="nav-link">Talk</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contributions</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Create account</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Login</a></li>
+                        </ul>
+                    </nav>
+                    <div class="secondbar">
+                        <div class="col-md-12">
+                            <nav class="navbar navbar-expand">
+                                <ul class="navbar-nav mr-auto">
+                                    <li class="nav-item"><a href="#" class="nav-link">Main page</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">Talk</a></li>
+                                </ul>
+                                <ul class="navbar-nav ml-auto second-link">
+                                    <li class="nav-item"><a href="#" class="nav-link">Read</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">View source</a></li>
+                                    <li class="nav-item"><a href="#" class="nav-link">View history</a></li>
+                                    <input type="text" placeholder="Search  Wiki-know">
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-md-12 content-2">
-                <h2>Contribute</h2>
-                <nav class="nav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Community portal</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Recent changes</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Upload files</a></li>
-                    </ul>
-                </nav>
+        <div class="left-side">
+            <div class="row">
+                <div class="col-md-12 text-center logo">
+                    <a href="#"><img src="images/logo (1).png" alt="logo">
+                        <h1>WIKI-KNOW</h1>
+                        <p>Knowledge at hand</p>
+                    </a>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12 content-3">
-                <nav class="nav">
+            <div class="row">
+                <div class="col-md-12 content-1">
+                    <nav class="nav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">Main page</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contents</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Current events</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Random article</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">About Wiki-know</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Contact us</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Donate</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 content-2">
+                    <h2>Contribute</h2>
+                    <nav class="nav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">Help</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Community portal</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Recent changes</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Upload files</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12 content-3">
                     <h3>Tools</h3>
-                    <ul class="navbar-nav">
-                    <li class="nav-item"><a href="#" class="nav-link">What links here</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Related changes</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Special pages</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Permanent link</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Page information</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Wiki-data item</a></li>
-                    </ul>
-                </nav>
+                    <nav class="nav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">What links here</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Related changes</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Special pages</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Permanent link</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Page information</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Wiki-data item</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
+
         </div>
 
     </div>
-
-
 
 </body>
 
